--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,19 +9,18 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title><%= appname %></title>
+  <title><%= websiteName %></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-  <!-- build:css styles/vendor.css -->
+  <!-- build:css css/main.css -->
   <!-- bower:css -->
   <!-- endbower -->
   <!-- endbuild -->
 
-  <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="../bower_components/modernizr/modernizr.js"></script>
+  <!-- build:js ../bower_components/modernizr/modernizr.js -->
   <!-- endbuild -->
 </head>
 
@@ -50,7 +49,7 @@
     ga('create','UA-XXXXX-X');ga('send','pageview');
   </script>
 
-  <!-- build:js scripts/vendor.js -->
+  <!-- build:js js/main.js -->
   <!-- bower:js -->
   <!-- endbower -->
   <!-- endbuild -->
