--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
 <!--[if IEMobile 7 ]><html class="no-js iem7"><![endif]-->
 <!--[if IE 7]><html class="no-js lt-ie9 lt-ie8 ie7"> <![endif]-->
 <!--[if IE 8]><html class="no-js lt-ie9 ie8"> <![endif]-->
@@ -27,28 +27,16 @@
 
 <body class="preload">
 
-  <!--[if lt IE 10]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+  @@include("browse-happy.html")
 
-  <header id="page-header" role="banner">
-  </header>
+  @@include("page-header.html")
 
-  <div id="main" role="main">
-  </div>
+  <main id="main" role="main">
+  </main>
 
-  <footer id="page-footer">
-  </footer>
+  @@include("page-footer.html")
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,"script","ga"));
-    ga("create","UA-XXXXX-X");ga("send","pageview");
-  </script>
+  @@include("google-analytics.js")
 
   <!-- build:js -->
   <script src="js/main.js"></script>
