--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,20 +9,25 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title><%= websiteName %></title>
+  <title>website</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-  <!-- build:css styles/main.css -->
+  <!-- build:css css/main.css -->
+  <!-- bower:css -->
   <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css">
+  <!-- endbower -->
   <link rel="stylesheet" href="css/main.css">
   <!-- endbuild -->
 
-  <!-- build:js scripts/vendor/modernizr.js -->
+  <!-- build:js js/vendor/modernizr.js -->
+  <!-- bower:js -->
   <script src="../bower_components/modernizr/modernizr.js"></script>
+  <!-- endbower -->
   <!-- endbuild -->
+
 </head>
 
 <body class="preload">
@@ -38,7 +43,7 @@
 
   @@include("google-analytics.js")
 
-  <!-- build:js -->
+  <!-- build:js js/main.js-->
   <script src="js/main.js"></script>
   <!-- endbuild -->
 
