nests by default

--- a/app/templates/_sass/dependencies/variables/_sizes.scss
+++ b/app/templates/_sass/dependencies/variables/_sizes.scss
@@ -2,4 +2,7 @@
 //  Sizes
 // ------------------------------------------------------------------
 
-$nest-width: 1024px;
+// Nested
+// ------------------------------------------------------------------
+$nest-width: 1260px;
+$nested-margin: $nest-width / 2;
