--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,19 +13,17 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
   <!-- build:css css/main.css -->
-  <!-- bower:css -->
-  <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css">
-  <!-- endbower -->
-  <link rel="stylesheet" href="css/main.css">
+    <!-- bower:css -->
+    <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css">
+    <!-- endbower -->
+    <link rel="stylesheet" href="css/main.css">
   <!-- endbuild -->
 
   <!-- build:js js/vendor/modernizr.js -->
-  <!-- bower:js -->
-  <script src="../bower_components/modernizr/modernizr.js"></script>
-  <!-- endbower -->
+    <!-- bower:js -->
+      <script src="../bower_components/modernizr/modernizr.js"></script>
+    <!-- endbower -->
   <!-- endbuild -->
 
 </head>
@@ -37,6 +35,7 @@
   @@include("page-header.html")
 
   <main id="main" role="main">
+    @@include(markdown("index-content.md"))
   </main>
 
   @@include("page-footer.html")
@@ -44,7 +43,10 @@
   @@include("google-analytics.js")
 
   <!-- build:js js/main.js-->
-  <script src="js/main.js"></script>
+    <!-- bower:js -->
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <!-- endbower -->
+    <script src="js/main.js"></script>
   <!-- endbuild -->
 
 </body>
