--- a/app/templates/_sass/dependencies/variables/_typography.scss
+++ b/app/templates/_sass/dependencies/variables/_typography.scss
@@ -2,7 +2,7 @@
 //  Typography
 // ------------------------------------------------------------------
 
-$body-stack: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$body-stack: "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $legal-stack: Georgia, "Times New Roman", Times, serif !default;
 $code-stack: Consolas, "Liberation Mono", Menlo, Courier, monospace !default;
 
